[metadata]
name = greenrobot
version = 1.0.0
author = Nick
author_email = npatrick04@gmail.com
description = A FRC framework built on greenlet
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Docs = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
